--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
    <title>Mind Reader</title>
    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
-<body>
 
+<body>
+   <p id='bigText'></p>
+   <button id='nextBtn'></button>
+   <p id='smallText'></p>
+   <button id='resetBtn'></button>
 
 <script src="main.js"></script>
 </body>
